--- a/css/about.css
+++ b/css/about.css
@@ -48,6 +48,14 @@ nav ul li a:hover{
 nav ul li a:active{
     color:red;
 }
+nav ul li a.logout{
+    text-decoration: none;
+    color: orange;
+    font-weight: bold;
+}
+nav ul li a.logout:hover{
+    color:#fafa17;
+}
 /* --------My Information---------- */
 .me{
     margin-left:5%;
