--- a/css/contact.css
+++ b/css/contact.css
@@ -15,7 +15,6 @@ body{
 .logo{
     width:130px;
 }
-
 /* --------Navigators-------- */
 nav{
     background-color: #173f5f;
@@ -48,6 +47,14 @@ nav ul li a:hover{
 }
 nav ul li a:active{
     color:red;
+}
+nav ul li a.logout{
+    text-decoration: none;
+    color: orange;
+    font-weight: bold;
+}
+nav ul li a.logout:hover{
+    color:#fafa17;
 }
 /* --------My Information---------- */
 .me{
